# W-ADS-250-LYN-3-1-systeme-matthias.begot

./: README.md  docker-compose.yml
docker/: docker-compose.yml
docker/nginx/conf.d/: default.conf
my_project_directory/: .gitignore  Dockerfile  composer.json
my_project_directory/assets/styles/: accueil.css
my_project_directory/migrations/: Version20240529114856.php  Version20240529122053.php
my_project_directory/src/Controller/: CategorieController.php  QuestionController.php  QuizzController.php  RegistrationController.php  ReponseController.php  SecurityController.php  UserController.php
my_project_directory/src/Entity/: Categorie.php  Question.php  Reponse.php  User.php
my_project_directory/src/Form/: CategorieType.php  QuestionType.php  QuizzType.php  ReponseType.php  UserType.php
my_project_directory/templates/: base.html.twig
my_project_directory/templates/categorie/: edit.html.twig  index.html.twig  new.html.twig  show.html.twig
my_project_directory/templates/login/: index.html.twig
my_project_directory/templates/question/: _form.html.twig  edit.html.twig  index.html.twig  new.html.twig  show.html.twig
my_project_directory/templates/quizz/: index.html.twig  result.html.twig  toto.html.twig
user_api/: .env  .gitignore  Cargo.toml  Dockerfile  diesel.toml  entrypoint.sh
user_api/migrations/2024-12-19-110837_create_users_table/: up.sql
user_api/src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs  schema.rs
user_api/src/open_ai_api/: handlers.rs
user_api/src/user/: handlers.rs  model.rs
(+7 files in other folders)
