[package]
name = "user_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.9"
dotenv = "0.15"
sea-orm = { version = "0.12", features = ["sqlx-mysql", "macros", "runtime-actix-native-tls"] }
sea-query = "0.32"
# Retirez la dépendance explicite à `sqlx` si vous n'en avez pas besoin directement
# sqlx = { version = "0.7", features = ["runtime-actix-native-tls", "macros", "mysql"] }
bcrypt = "0.16.0"

# Diesel uniquement pour les migrations
diesel = { version = "2", features = ["mysql"] }

[dev-dependencies]
actix-http = "3.9.0"
reqwest = "0.11"
