[package]
name = "user_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11.5"
dotenv = "0.15"
sea-orm = { version = "1.1.2", features = ["sqlx-mysql", "macros", "runtime-actix-native-tls"] }
sea-query = "0.32"
bcrypt = "0.16.0"
reqwest = { version = "0.12.9", features = ["json"] }
diesel = { version = "2", features = ["mysql"] }

[dev-dependencies]
actix-http = "3.9.0"
